--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ a {
   max-width: 960px;
   margin: 0 auto;
 }
-.logo {
+.contact {
   font-size: 30px;
   font-weight: 800;
 }
@@ -67,7 +67,7 @@ header {
   padding: 25px 0;
   overflow: hidden;
 }
-header .logo {
+header .contact {
   color: #fff;
   float: left;
 }
@@ -106,7 +106,7 @@ header nav li:first-child{
   padding-top: 32px;
 }
 
-#hero .logo {
+#hero .contact {
   color: #fff;
 }
 #hero h2 {
@@ -273,7 +273,7 @@ footer {
   padding: 45px 0 45px;
   text-align: center;
 }
-footer .logo {
+footer .contact {
   color: #A3A3A3;
   margin-bottom: 10px;
   font-size: 40px;
@@ -300,7 +300,7 @@ footer p {
   h3 {
     font-size: 30px;
   }
-  .logo {
+  .contact {
     font-size: 30px;
   }
   header nav {
@@ -354,7 +354,7 @@ footer p {
   #main {
     margin-top: 25px;
   }
-  footer .logo, footer ul li {
+  footer .contact, footer ul li {
     margin-bottom: 10px;
   }
   #posts, #sidebar {
