--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -1,66 +1,3 @@
-@keyframes slider {
-
-0% {
-	left: 0;
-}
-
-20% {
-	left: 0;
-}
-
-25% {
-	left: -100%;
-}
-
-45% {
-    left: -100%;
-
-}
-
-50% {
-		left: -200%;
-
-}
-
-70% {
-	left: -200%;
-}
-
-75% {
-	left: -300%;
-}
-
-95% {
-	left: -300%;
-}
-
-100% {
-	left: -400%;
-
-}
-
-}
-
-#slider {
-	overflow: hidden;
-}
-
-#slider figure img {
-	width: 20%;
-	float: left;
-}
-
-#slider figure {
-	position: relative;
-	width: 500%;
-	margin: 0;
-	left: 0;
-	text-align: left;
-	font-size: 0;
-	animation: 20s slider infinite;
-
-}
-
 
 /* Box Model Hack */
 * {
@@ -122,23 +59,14 @@ a {
 }
 .contact {
   font-size: 30px;
+  font-weight: 800;
 }
 
 header {
-  background: #E0E0E0;
+  background: white;
   padding: 25px 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-
+  overflow: hidden;
 }
-
-a:hover{
-    color: dodgerblue;
-}
-
 header .contact {
   color: #fff;
   float: left;
@@ -159,7 +87,7 @@ header nav ul li a {
 header nav .line{
   width: 3em;
   height: .3em;
-  background: dodgerblue;
+  background: #033059;
   border-radius: 1em;
   margin-top: .25em;
 }
@@ -172,16 +100,10 @@ header nav li:first-child{
   cursor: pointer;
 }
 
-h2 {
-  text-align: center;
-  font-size: 60px;
-  color: #a3a3a3;
-}
-
 #hero {
-  height: 500px;
-  background: url(../images/LOS-ANGELES.jpg) no-repeat top center #131e27;
-  padding-top: 125px;
+  height: 700px;
+  background: url(../images/what_is_a_product_manager_bg.png) no-repeat top center #131e27;
+  padding-top: 32px;
 }
 
 #hero .contact {
@@ -196,11 +118,6 @@ h3 {
   font-size: 40px;
   font-weight: 600;
 }
-
-h5 {
-  margin: 0px 10px 10px 0px;
-}
-
 #resume p, #resume ul {
   width: 728px;
 }
@@ -208,23 +125,19 @@ h5 {
   list-style: disc;
   margin: 10px 0 30px 80px;
 }
-
 #portfolio {
-  background:#B6B6B4;
+  background:#a3a3a3;
   padding: 70px 0 70px;
   color: #fff;
 }
 h6 {
   color: #033048;
   font-size: 40px;
+  font-weight: 600;
   padding-bottom: 30px;
   text-align: center;
   width: 75%;
   margin: 0 auto;
-}
-
-ul {
-  font-size: 16px;
 }
 
 #portfolio li {
@@ -234,13 +147,14 @@ ul {
 
 footer {
   background: #033059;
-  padding: 25px 0 25px;
+  padding: 45px 0 45px;
   text-align: center;
 }
 footer .contact {
   color: #A3A3A3;
   margin-bottom: 10px;
   font-size: 40px;
+  font-weight: 600;
 }
 footer ul li {
   display: inline;
@@ -281,7 +195,6 @@ footer p {
     position: absolute;
     top:.6em;
     right:.75em;
-    z-index: 99999;
   }
   header nav ul li a {
     display: block;
@@ -299,12 +212,12 @@ footer p {
     height: 10em;
   }
   #hero {
-    height: 250px;
-    background: ##131e27;
+    height: 435px;
+    background: url(../images/what_is_aproduct_manger_mobile_bg.png) no-repeat top center #131e27;
     padding: 30px 0 50px;
   }
   #hero h2 {
-    font-size: 37px;
+    font-size: 28px;
     margin: 40px 0 60px;
   }
   #resume {
