--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,3 @@
-@keyframes slider {
-
-0% {
-	left: 0;
-}
-
-20% {
-	left: 0;
-}
-
-25% {
-	left: -100%;
-}
-
-45% {
-    left: -100%;
-
-}
-
-50% {
-		left: -200%;
-
-}
-
-70% {
-	left: -200%;
-}
-
-75% {
-	left: -300%;
-}
-
-95% {
-	left: -300%;
-}
-
-100% {
-	left: -400%;
-
-}
-
-}
-
-#slider {
-	overflow: hidden;
-}
-
-#slider figure img {
-	width: 20%;
-	float: left;
-}
-
-#slider figure {
-	position: relative;
-	width: 500%;
-	margin: 0;
-	left: 0;
-	text-align: left;
-	font-size: 0;
-	animation: 20s slider infinite;
-
-}
-
-
 /* Box Model Hack */
 * {
   -moz-box-sizing: border-box; /* Firexfox */
@@ -188,6 +124,69 @@ h2 {
   color: #fff;
 }
 
+@keyframes slider {
+
+0% {
+	left: 0;
+}
+
+20% {
+	left: 0;
+}
+
+25% {
+	left: -100%;
+}
+
+45% {
+    left: -100%;
+
+}
+
+50% {
+		left: -200%;
+
+}
+
+70% {
+	left: -200%;
+}
+
+75% {
+	left: -300%;
+}
+
+95% {
+	left: -300%;
+}
+
+100% {
+	left: -400%;
+
+}
+
+}
+
+#slider {
+	overflow: hidden;
+}
+
+#slider figure img {
+	width: 20%;
+	float: left;
+}
+
+#slider figure {
+	position: relative;
+	width: 500%;
+	margin: 0;
+	left: 0;
+	text-align: left;
+	font-size: 0;
+	animation: 20s slider infinite;
+
+}
+
 #resume {
   padding: 30px 0 30px;
 }
@@ -198,10 +197,11 @@ h3 {
 }
 
 h5 {
+  font-weight: 600;
   margin: 0px 10px 10px 0px;
 }
 
-#resume p, #resume ul {
+#resume ul {
   width: 728px;
 }
 #resume ul {
@@ -311,7 +311,8 @@ footer p {
     background: #;
     padding: 30px 0;
   }
-  #resume p, #resume ul {
+
+  #resume ul {
     width: 82%;
     margin: 0 auto 20px;
   }
